# Industrial-Predective-Maintanance

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
deployment/: .env.example  Caddyfile  docker-compose.gcp.yml  docker-compose.yml  start.sh
docs/: API-REFERENCE.md  CODEBASE-REVIEW.md  DATA-GOVERNANCE.md  DEPLOYMENT-STRATEGY-V1.md  DEPLOYMENT.md  SenseMinds360-API-Reference.docx  SenseMinds360-Codebase-Review.docx  SenseMinds360-Data-Governance.docx  SenseMinds360-Deployment-Guide.docx  SenseMinds360-Deployment-Strategy-v1.docx  SenseMinds360-ML-Strategy.docx  SenseMinds360-Technical-Walkthrough.docx  TECHNICAL-WALKTHROUGH.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
senseminds/: __init__.py
tests/: conftest.py  test_alert_policy.py  test_analysis_concurrency.py  test_analysis_persistence.py  test_api.py  test_api_health.py  test_application_persistence.py  test_artifact_store.py  test_catalog.py  test_config.py  test_db_parity.py  test_domain.py  test_feedback_loop.py  test_finding_delta.py  test_findings.py  test_findings_validation.py  test_forecasting.py  test_health.py  test_ingestion.py  test_kg_idempotency.py  test_kg_postgres.py  test_knowledge_graph.py  test_llm_grounding.py  test_operating_envelope.py  test_operating_state.py  test_operational_timeline.py  test_parity_operating_envelope.py  test_parity_operating_state.py  test_parity_operational_timeline.py  test_parity_phase1.py  test_parity_reliability.py  test_parity_statistics.py  test_parity_threshold.py  test_pattern_learning.py  test_quality_gate.py  test_reading_validation.py  test_reliability.py  test_remediation.py  test_rules.py  test_rules_kg_integration.py  (+2 more)
tools/: make_diagrams.py  md2docx.py
(+203 files in other folders)
