[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senseminds"
version = "0.1.0"
description = "SenseMinds 360 - Industrial Intelligence Platform for pharmaceutical manufacturing utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["senseminds*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["senseminds", "tests"]

[tool.ruff.lint]
# Enforced across every module (ADR "engineering quality" requirements):
# E/F pyflakes+pycodestyle, I import-order, B bugbear, UP pyupgrade,
# ANN function annotations (strict typing), RET, SIM, TID.
select = ["E", "F", "I", "B", "UP", "ANN", "RET", "SIM", "TID"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection defaults are the framework's intended pattern.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Security"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # test functions need not be fully annotated
# Alembic migrations follow their own template conventions.
"senseminds/infrastructure/db/migrations/*" = ["ANN", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
